--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Replacerator",
-  "version": "1.0",
+  "version": "1.0.1",
   "manifest_version": 2,
-  "description": "cloud to butt",
+  "description": "Define custom rules to replace text in your browser.",
   "options_page": "options.html",
   "content_scripts": [
     {
