--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Replacerator",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "manifest_version": 2,
   "description": "Define custom rules to replace text in your browser.",
   "options_page": "options.html",
@@ -8,9 +8,10 @@
     "scripts": ["background.js"],
     "persistent": false
   },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
-      "js": [ "replace.js" ],
+      "js": [ "util.js", "replace.js" ],
       "matches": [ "http://*/*", "https://*/*", "file:///*" ]
     }
   ],
