--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Replacerator",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "manifest_version": 2,
   "description": "Define custom rules to replace text in your browser.",
   "options_page": "options.html",
@@ -11,7 +11,8 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
-      "js": [ "util.js", "replace.js" ],
+      "js": [ "lib/underscore.min.js",
+              "util.js", "replace.js" ],
       "matches": [ "http://*/*", "https://*/*", "file:///*" ]
     }
   ],
